--- a/Paper/latex/paper_RAG.tex
+++ b/Paper/latex/paper_RAG.tex
@@ -120,7 +120,7 @@
 %% Sample for unstructured abstract %%
 %%==================================%%
 
-\abstract{Retrieval-Augmented Generation (RAG) improves the quality of language model responses by incorporating external knowledge. However, its performance heavily relies on choosing the right number of documents to retrieve (K).therefore,despite it being computationally efficient,  Using a fixed number of documents (K) fails to adapt to the complexity of different queries.On the other hand, dynamically adjusting K offers flexibility but comes with higher computational costs and inconsistency. To overcome these challenges, we introduce a hybrid approach to dynamic K selection. This method adapts K based on the specific characteristics of each query while keeping computational demands manageable. Consequently, our  strategy enhances retrieval performance by minimizing irrelevant information, ensuring the retrieval of relevant data, and boosting overall system accuracy. Experiments show that this approach outperforms both fixed and fully dynamic methods, offering a promising way to optimize retrieval in RAG systems.Future research will focus on developing learning-based techniques to further improve the dynamic selection of K.}
+\abstract{Retrieval-Augmented Generation (RAG) improves the quality of language model responses by incorporating external knowledge. However, using a fixed number of retrieved documents (K) fails to adapt to varying query complexity, often leading to suboptimal retrieval either including irrelevant documents or missing crucial ones. To address this issue, we propose a hybrid approach that dynamically adjusts K based on query characteristics while maintaining computational efficiency. Our method improves retrieval performance by maximizing relevant information and minimizing noise. Experimental results show that it outperforms fixed-K retrieval, offering a more effective solution for optimizing RAG systems. Future work will explore learning-based techniques to further refine dynamic K selection. Future work will explore learning-based techniques to further refine dynamic K selection.}
 
 %%\pacs[JEL Classification]{D8, H51}
 
@@ -130,15 +130,12 @@
 
 \section{Introduction}\label{sec1}
 
-Large Language Models (LLMs)\cite{Radford2019} have emerged as state-of-the-art artificial intelligence systems that excel at understanding and generating human-like text,Built on deep learning architectures,particularly transformers \cite{vaswani2017attention}. These models are trained on massive datasets to capture linguistic patterns and semantic relationships, thereby showcasing impressive adaptability across diverse tasks, such as machine translation\cite{Gu2018SearchEngine}, text generation\cite{liang2024controllabletextgenerationlarge} and question answering\cite{Zhang2023}.Notable examples of LLMs include OpenAI GPT series\cite{brown2020language} , Google BERT\cite{devlin2018bert} and T5 \cite{raffel2020exploring} which have set new benchmarks in NLP tasks .\\
-Despite their impressive capabilities,LLMs suffer from hallucination\cite{ji2023survey} where they confidently generate factually incorrect or entirely fabricated information.Naturally,This poses significant challenges in applications requiring high accuracy like knowledge-intensive tasks\cite{kandpal2023large}.Another limitation of LLMs is their static nature, as they are trained on fixed datasets\cite{bender2021dangers} and cannot dynamically update their knowledge . As a result, they are prone to generate outdated or inconsistent responses, especially for time-sensitive or evolving data\cite{Mousavi2025}. 
+Large Language Models (LLMs)\cite{Radford2019} have emerged as state-of-the-art artificial intelligence systems that excel at understanding and generating human-like text,Built on deep learning architectures,particularly transformers \cite{vaswani2017attention},these models showcase impressive adaptability across diverse tasks, such as machine translation\cite{Gu2018SearchEngine}, text generation\cite{liang2024controllabletextgenerationlarge} and question answering\cite{Zhang2023}.Notable examples of LLMs include OpenAI GPT series\cite{brown2020language} , Google BERT\cite{devlin2018bert} and T5 \cite{raffel2020exploring}.Despite their impressive capabilities,LLMs suffer from hallucination\cite{ji2023survey} suffer from hallucination, often generating confident but incorrect information.This is a critical challenge for knowledge-intensive tasks requiring high accuracy\cite{kandpal2023large}.Additionally, their static nature?being trained on fixed datasets\cite{bender2021dangers} mits their ability to update knowledge dynamically, making them prone to outdated or inconsistent responses, especially for time-sensitive information.\cite{Mousavi2025}. 
 
 
-Researchers have explored various approaches to address this limitation, including transfer learning\cite{zhuang2020comprehensive}a technique that improves pre-trained models performance in new tasks by transferring knowledge from related tasks.Another technique is fine-tuning \cite{Howard2018} which adapt pre-trained models to specific tasks or domains. While these methods improve performance on targeted tasks,they are computationally expensive and impractical for real-time knowledge updates. A promising alternative is Retrieval-Augmented Generation (RAG) \cite{lewis2020retrieval}.which integrates real-time retrieval from external knowledge sources with generative models.
+Researchers have explored various approaches to address this limitation, including transfer learning\cite{zhuang2020comprehensive}a technique that improves pre-trained models performance in new tasks .Another technique is fine-tuning \cite{Howard2018} which adapt pre-trained models to specific tasks or domains. despite their strengths,they are computationally expensive and impractical for real-time knowledge updates. A promising alternative is Retrieval-Augmented Generation (RAG) \cite{lewis2020retrieval}.which integrates real-time retrieval from external knowledge sources with generative models enables LLMs to access up-to-date information without retraining, making it particularly useful for applications like open-domain question answering.However,(RAG) faces several limitations. For instance,The performance of RAG heavily depends on the quality of the retriever \cite{karpukhin2020dpr}, as irrelevant or noisy documents can degrade the generator output. Additionally,A critical challenge is determining the optimal number of retrieved passages (K) to feed into the generator\cite{lewis2020retrieval}. often resulting in either insufficient or excessive information being retrieved, reduce coherence and increase computational overhead. This trade-off makes K a key factor in balancing performance and efficiency. 
 
-RAG enables LLMs to access up-to-date information without retraining, making it particularly useful for applications like open-domain question answering and fact-checking.However,(RAG) faces several limitations. For instance,The performance of RAG heavily depends on the quality of the retriever \cite{karpukhin2020dpr}, as irrelevant or noisy documents can degrade the generator output. Additionally, retrieving and processing a large number of documents increases computational overhead , making RAG less efficient for real-time applications. A critical challenge is determining the optimal number of retrieved passages (K) to feed into the generator\cite{lewis2020retrieval}. often resulting in either insufficient or excessive information being retrieved, reduce coherence and increase computational overhead. This trade-off makes K a key factor in balancing performance and efficiency. 
-
-Current approaches, such as static K selection \cite{lewis2020retrieval} involves retrieving a fixed number of top results regardless of the query characteristics ,it cannot adapt to the complexity of individual queries , dynamic K adjustment attempt to address this trade-off but often introduce complexity or latency ,Hybrid approaches like those proposed yuan et al . \cite{yuan2024hybrid},that integrates static retrieval with dynamic retrieval to improve accuracy. Furthermore, the "Blended RAG"\cite{sawarkar2024blendedragimprovingrag} approach enhances retrieval accuracy by combining semantic search techniques with hybrid query strategies. However, the approach faces significant limitations, including high computational overhead due to the need for multiple retrieval methods and dependency on high-quality metadata for optimal performance. These limitations highlight the need for a more robust approach to K selection, capable of balancing efficiency and accuracy across varying query types.
+Current approaches, such as static K selection \cite{lewis2020retrieval}, dynamic K adjustment attempt to address this trade-off but often introduce complexity or latency,Hybrid approaches like those proposed yuan et al.\cite{yuan2024hybrid},that integrates static retrieval with dynamic retrieval . Furthermore, the "Blended RAG"\cite{sawarkar2024blendedragimprovingrag} approach enhances retrieval accuracy by combining semantic search techniques with hybrid query strategies. However, the approach faces significant limitations, including high computational overhead and dependency on high-quality metadata for optimal performance. These limitations highlight the need for a more robust approach to K selection, capable of balancing efficiency and accuracy across varying query types.
 
 
 In this paper, we investigate the problem of selecting K in RAG and propose a novel approach to dynamically adjust K based on  thresholds and a Mixture of Logits (MoL)\cite{ding2024efficient} scoring mechanism, ensuring efficient and context-sensitive candidate selection while reducing computational costs. the use of  adaptive thresholds algorithm improves the relevance of retrieved documents, refining the set to include only the most contextually appropriate matches. Unlike traditional approaches, it adapts to the query and dataset characteristics, making it more flexible for diverse contexts. Furthermore, its design for handling large datasets ensures scalable and precise retrieval, which is crucial for RAG systems working with extensive corpora.
@@ -150,20 +147,19 @@ The final section presents experimental results that demonstrate the effectivene
 
 
 \section{Related works}\label{sec2}
-The selection of an optimal number of retrieved items (K) in Retrieval-Augmented Generation (RAG) systems plays a crucial role in ensuring accurate and efficient responses.Several methods, including static, dynamic, and hybrid approaches have been proposed to address this challenge While these methods show promise in improving performance,they often face trade-offs between adaptability, efficiency when applied to complex or diverse query patterns. In this section, we will explore these methods, highlight their respective strengths and weaknesses, and introduce our hybrid solution as a more robust and adaptable alternative. \\
-\textbf{Static Top-K selection in Retrieval} 
+The selection of an optimal number of retrieved items (K) in Retrieval-Augmented Generation (RAG) systems plays a crucial role in ensuring accurate and efficient responses.Several methods, including static, dynamic, and hybrid approaches have been proposed to address this challenge While these methods show promise in improving performance,they often face trade-offs between adaptability, efficiency when applied to complex or diverse query patterns. In this section, we will explore these methods, highlight their respective strengths and weaknesses, and introduce our hybrid solution as a more robust and adaptable alternative. 
+
+Static Top-K selection in Retrieval :In traditional Retrieval-Augmented Generation (RAG) systems, static K-selection is a widely used method where a fixed number of top-k documents are retrieved based on their relevance scores. Sparse retrieval\cite{bai2020spartermlearningtermbasedsparse} methodsw here documents and queries are represented as high-dimensional, sparse vectors In these method , the "keys" represent documents to be retrieved, and the "values" are he importance or weight of those terms in the document such as query likelihood models\cite{Lafferty2001} ,TF-IDF\cite{Robertson1997} and BM25\cite{Zaragoza2009} often rely on this static approach to identify and rank documents. For instance, if k  =5, the system retrieves the top 5 documents deemed most relevant to a query, regardless of the query's complexity or the variability in relevance distribution among documents.
+A major drawback of this approach is its rigidity. Since the number of retrieved documents (k) is fixed, it fails to adapt to the varying complexity of queries. For simple queries, retrieving many documents may introduce noise, while for complex queries, retrieving few documents may result in incomplete or insufficient information. This one-size-fits-all strategy can lead to suboptimal performance across diverse datasets or tasks.
 
 
-In traditional Retrieval-Augmented Generation (RAG) systems, static K-selection is a widely used method where a fixed number of top-k documents are retrieved based on their relevance scores. Sparse retrieval\cite{bai2020spartermlearningtermbasedsparse} methodsw here documents and queries are represented as high-dimensional, sparse vectors In these method , the "keys" represent documents to be retrieved, and the "values" are he importance or weight of those terms in the document such as query likelihood models\cite{Lafferty2001} ,TF-IDF\cite{Robertson1997} and BM25\cite{Zaragoza2009} often rely on this static approach to identify and rank documents. For instance, if k  =5, the system retrieves the top 5 documents deemed most relevant to a query, regardless of the query's complexity or the variability in relevance distribution among documents.
-A major drawback of this approach is its rigidity. Since the number of retrieved documents (k) is fixed, it fails to adapt to the varying complexity of queries. For simple queries, retrieving many documents may introduce noise, while for complex queries, retrieving few documents may result in incomplete or insufficient information. This one-size-fits-all strategy can lead to suboptimal performance across diverse datasets or tasks.\\
-\textbf{Dynamic top-k Selection in Retrieval}
-
+Dynamic top-k Selection in Retrieval :
 Dynamic k-selection addresses the limitations of static k by varying the number of retrieved documents based on the specific query or context. These approaches typically involve heuristics, machine learning models, or adaptive algorithms to determine the optimal K for each query such as Dynamic Query Cutoff (DQC)\cite{Culpepper2016} This approach uses machine learning models trained on query-document features to predict the optimal k for retrieval , A reinforcement learning-based approach\cite{Zhou2021} where the agent learns to adjust k by maximizing downstream task performance (e.g accurate response generation in RAG) Another example is the Dynamic Selection of k Nearest Neighbors \cite{DynamicKNN2012} where the selection process often depends on the distribution of neighbors, their distances to the query point, or their relevance scores.
-However, these methods come with limitations.They often introduce computational overhead due to the need for dynamic evaluation, which can increase latency in large-scale systems. Additionally, their performance heavily depends on the quality of the underlying models or distance metrics, making them sensitive to noisy data or poorly tuned hyperparameters. As a result, achieving generalization across diverse datasets or domains remains a significant challenge. \\
-\textbf{Hybrid Approaches For Top-K selection in Retrieval}
+However, these methods come with limitations.They often introduce computational overhead due to the need for dynamic evaluation, which can increase latency in large-scale systems. Additionally, their performance heavily depends on the quality of the underlying models or distance metrics, making them sensitive to noisy data or poorly tuned hyperparameters. As a result, achieving generalization across diverse datasets or domains remains a significant challenge.
 
-
-Hybrid approaches combine elements of static and dynamic K-selection to achieve a balance between simplicity and adaptability.These systems might use a static 
+ 
+Hybrid Approaches For Top-K selection in Retrieval :
+combine elements of static and dynamic K-selection to achieve a balance between simplicity and adaptability.These systems might use a static 
 k as a baseline but dynamically adjust such as STAYKATE (Static-Dynamic Hybrid Selection)\cite{Zhu2024} Combines static (active learning-inspired) and dynamic (KATE-based) example selection strategies to create STAYKATE. Another example is DR-RAG (Dynamic Relevance for Retrieval-Augmented Generation)\cite{hei2024drragapplyingdynamicdocument} retrieval framework designed to improve the relevance between queries and documents. In the first stage, a similarity matching method retrieves an initial set of documents. In the second stage, a deeper analysis is performed to identify dynamic-relevant documents, supported by a classifier that filters out irrelevant ones . however hybrid methods may face challenges in determining when to apply static or dynamic k-selection effectively, leading to potential trade-offs between retrieval accuracy and system efficiency. These limitations highlight the ongoing need for robust mechanisms that dynamically and efficiently adapt k to the unique characteristics of each query and dataset.
 
 Our method leverages adaptive thresholds to dynamically refine the list of retrieved documents, to make sure that only the most contextually relevant matches are included. In contrast to traditional static or fixed K-selection techniques, which employ a consistent retrieval strategy for every query, our approach adapts to the specific characteristics of both the query and the dataset. This flexibility allows the algorithm to better accommodate diverse contexts, enhancing the relevance and quality of retrieval results.Through its adaptive nature, the method not only improves retrieval accuracy but also minimizes computational overhead by focusing resources on the most pertinent results. 
@@ -181,9 +177,9 @@ As illustrated in figure \ref{rag.PNG}, the RAG system is built around two main 
 
 Retrieval is the process of identifying and gathering information system resources that match a specific information need. To break it down, imagine these resources as a key-value store, represented as pairs:
 
-\[
-\{(k_i, v_i)\}_{i=1}^{N}
-\]
+\begin{equation}
+	\{(k_i, v_i)\}_{i=1}^{N}
+\end{equation}
 
 where each key \( k_i \) is linked to a corresponding value \( v_i \) (often, the key and value are the same). When a query \( q \) is provided, the goal is to find the top-\( k \) keys that are most similar to the query using a similarity function \( s \), and then retrieve their associated values\cite{gupta2024comprehensivesurveyretrievalaugmentedgeneration}.
 
@@ -201,85 +197,76 @@ Once the retriever fetches relevant data from external sources,the generator pro
 In various generative tasks, different models are selected based on the specific requirements: Models like BART\cite{lewis2019bart} and GPT\cite{brown2020language}are commonly used for tasks such as text summarization and translation ,Vision-Language Models (VLMs) \cite{radford2021learningtransferablevisualmodels} are employed to generate textual descriptions from images , for text-to-Code Generation: Models like OpenAIs Codex \cite{chen2021evaluatinglargelanguagemodels} are designed to translate natural language prompts into executable code.
 
 
-\section{Proposed Slution}\label{sec3}
+\section{Proposed Solution}\label{sec3}
 In traditional candidate selection systems, the reliance on static or fixed top-K retrieval lead to suboptimal retrieval performance, especially in scenarios where the relevance distribution of candidates is highly variable. In this section, we introduce the Mixture of Logits (MoL) and describe its role in representing a learned similarity function. Table \ref{tab:Notations_table} summarizes the notations used in this paper and we propose Dynamic Candidate Selection, a novel algorithm that adaptively refines the candidate selection process by leveraging component-level embeddings and a Mixture of Logits (MoL) scoring mechanism.
 
 
 \subsection{Mixture of Logits} 
 
 The Mixture of Logits (MoL)\cite{zhai2023revisiting} methode provides a flexible and adaptive mechanism for computing similarity scores between queries and items. Given a query \( q \) and an item \( x \), MoL assumes that both are mapped to \( P \) groups of low-rank embeddings, denoted as \( f_p(q) \) and \( g_p(x) \), respectively. These embeddings are parameterized by neural networks that extract features from the query and item. The similarity between \( q \) and \( x \) is computed as a weighted sum of the inner products of these embeddings, where the weights \( \pi_p(q, x) \)\cite{zhai2023revisiting} are adaptive gating parameters constrained to sum to 1:
-\[
-\text{Similarity}(q, x) = \sum_{p=1}^P \pi_p(q, x) \cdot \langle f_p(q), g_p(x) \rangle.
-\]
+
+\begin{equation}
+	\text{Similarity}(q, x) = \sum_{p=1}^P \pi_p(q, x) \cdot \langle f_p(q), g_p(x) \rangle.
+\end{equation}
+
 This formulation allows MoL to capture complex relationships between queries and items, making it particularly suitable for dynamic candidate selection tasks.
 
 \begin{table}[h!]
 	\centering
-	\normalsize 
-	\resizebox{\textwidth}{!}{ 
-	\begin{tabular}{|c|l|}
+	\large  % Increase overall font size
+	\begin{tabular}{|c|p{11cm}|}  % Use p{width} for text wrapping
 		\hline
 		\textbf{Notation} & \textbf{Description} \\ \hline
-		\( q \) (\( Q \), \( |Q| \)) & A single query ,(set of all queries, total number of queries). \\ \hline
-		\( x \) (\( X \), \( |X| \)) & A single item ,(set of all items, total number of items). \\ \hline
+		\( q \) (\( Q \), \( |Q| \)) & A single query (set of all queries, total number of queries). \\ \hline
+		\( x \) (\( X \), \( |X| \)) & A single item (set of all items, total number of items). \\ \hline
 		\( \phi(q, x) \) & The learned similarity function, Mixture-of-Logits (MoL), which computes the similarity between \( q \) and \( x \). \\ \hline
 		\( P \) (\( P_q \), \( P_x \)) & Total number of low-rank embeddings (\( P = P_q \times P_x \)), where \( P_q \) and \( P_x \) are the number of embeddings for \( q \) and \( x \), respectively. \\ \hline
 		\( \pi_p(q, x) \)  & Weight for the \( p \)-th (or \( p_q \)-th and \( p_x \)-th) embedding set for \( (q, x) \). \\ \hline
 		\( f(q) \) (\( f_p(q) \)) & Learned embedding for the query (\( p \)-th component-level embedding for \( q \)). \\ \hline
 		\( g(x) \) (\( g_p(x) \)) & Learned embedding for the item (\( p \)-th component-level embedding for \( x \)). \\ \hline
 		\( \langle f(q), g(x) \rangle \) & Dot product similarity function: \( \langle f(q), g(x) \rangle = g(x)^T f(q) \). \\ \hline
-	\end{tabular} }
-	\caption{ Notations table}
+	\end{tabular}
+	\caption{Notation Table}
 	\label{tab:Notations_table}
 \end{table}
+
 \subsection{Retrieval Algorithm}
 Inspired by the approach in\cite{ding2024efficient}, we introduce an adaptive threshold mechanism (\textbf{Dynamic Candidate Selection}), the MoL framework is employed to refine the candidate retrieval process. Specifically:
 \begin{enumerate}
 	\item \textbf{Component-Level Embeddings:}  
 	 generate component-level embeddings for all items in \( X \). These embeddings allow efficient similarity computations during retrieval.
-	\begin{equation*}
+	\begin{equation}
 		X_p \leftarrow \{ g_p(x) \mid x \in X \}
-	\end{equation*}
+	\end{equation}
 	
 	\item \textbf{Dynamic Threshold Adjustment:}  
 	To refine retrieval quality, we compute Mixture of Logits (MoL) scores for each candidate \( x \in G \).  
 	The adaptive gating weights \( \pi_p(q, x) \) enable the algorithm to dynamically adjust the retrieval threshold \( T_{\text{adaptive}} \) based on the computed MoL scores.
-	\begin{equation*}
+	\begin{equation}
 		\varphi(q, x) = \sum_{p=1}^{P} \pi_p(q, x) \cdot \langle f_p(q), g_p(x) \rangle
-	\end{equation*}
-	\begin{equation*}
+	\end{equation}
+	\begin{equation}
 		T_{\text{adaptive}} = \min \{ s \mid s \in G \}
-	\end{equation*}
+	\end{equation}
 	
 	\item \textbf{Refinement and Top-K Selection:}  
 	Additional relevant candidates are retrieved using the adaptive threshold \( T_{\text{adaptive}} \), expanding the candidate set \( G' \). The algorithm then selects the most relevant top-k results by sorting \( G' \) based on MoL scores.
-	\begin{equation*}
+	\begin{equation}
 		G' \leftarrow G \cup \{ x \mid s_p \geq T_{\text{adaptive}} \}
-	\end{equation*}
+	\end{equation}
 	\item \textbf{ Select Exact Top-k Items:} Finally, we sort candidates by MoL scores and extract the exact top-k:
-	\begin{equation*}
+	\begin{equation}
 		G_{\text{final}} = \text{Top-}k(G', \varphi(q, x))
-	\end{equation*}
+	\end{equation}
 \end{enumerate}
-the flowchart provided in Figure~\ref{fig2} describes the step-by-step process of the proposed algorithm. It visualizes the key stages of the solution
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.9\textwidth]{Flowchart_Steps.PNG}
-	\caption{Algorithm workflow. }\label{fig2}
-\end{figure}
-
-
 As shown in Algorithm\ref{ALgo1}, the retrieval process dynamically adjusts the threshold based on MoL scores.
 \begin{algorithm}
 \caption{Hybrid Exact Top-k with Threshold-Based k Selection}
 \label{ALgo1}
 	\begin{algorithmic}[1]
-     \textbf{Input:}
-	     	 Query $q$ , Set of items $X$ ,Component-level embeddings: $f_p(q)$, $g_p(x)$ for $p \in P$, $x \in X$ , Initial threshold $T_{\text{init}}$  \newline
-             \textbf{Output:}
-	         Exact top $k$ items based on dynamic threshold selection, $G_{\text{final}}$ \newline
-	 
-         	\State Set $G \gets \emptyset$     \Comment{Initial candidate set}
+     \textbf{Input:} Query $q$ , Set of items $X$ ,Component-level embeddings: $f_p(q)$, $g_p(x)$ for $p \in P$, $x \in X$ , Initial threshold $T_{\text{init}}$  \newline
+      \textbf{Output:}Exact top $k$ items based on dynamic threshold selection, $G_{\text{final}}$ \newline
+      	\State Set $G \gets \emptyset$     \Comment{Initial candidate set}
 		\For{each component $p \in P$}
 		\State $X_p \gets \{g_p(x) \mid x \in X\}$ \Comment{Precompute embeddings}
 		\EndFor
@@ -311,13 +298,15 @@ As shown in Algorithm\ref{ALgo1}, the retrieval process dynamically adjusts the 
 		\EndFor
 		
 		 \textbf{4. Select Exact Top-k Items:}
+		 \For{each component $p \in P$}
 		\State Compute MoL scores for all items in $G'$
 		\State Sort $G'$ by MoL scores in descending order
 		\State Select the top $k$ items from $G'$ where $k$ is the number of items in $G'$ exceeding $T_{\text{adaptive}}$
-		
+			\EndFor
 		\State\textbf{ Return:} $G_{\text{final}}$ \Comment{Retrieve Top $k$ items from $G'$}
 	\end{algorithmic}
 \end{algorithm}
+\newpage
 \section{Experimental Results}\label{sec3}
 We evaluate the performance of our hybrid retrieval algorithm and the Mixture-of-Logits (MoL) approach on the next-item prediction task in recommendation systems\cite{Zhu_2018}\cite{kang2018selfattentivesequentialrecommendation}. We conducted experiments using two MovieLens datasets: ML-100K and ML-1M \cite{Harper2015}  which are widely used benchmarks for evaluating sequential recommendation models.\\
 \textbf{MovieLens-100K} \\
@@ -334,8 +323,7 @@ For both datasets, We utilize the SASRec architecture as our sequential user enc
 The query q represents the user's state at a specific time step, derived from their interaction history. In the MoL (Mixture of Logits) framework, q is transformed into Pq
 embeddings through a multi-layer perceptron (MLP). While our hybrid algorithm does not explicitly employ an MLP for this transformation
 \subsection{Hyperparameter settings.}
-For fair comparison, we maintained consistent architectural choices and training conditions across all experiments , We conducted an extensive hyperparameter analysis comparing both approaches (Hybrid+SAS and MoL+SAS) across different architectural configurations.All experiments were pmplemented in TensorFlow and trained on a Google Colab environment with a T4 GPU. We use the Adam optimizer with a learning rate of 0.001. For the hybrid algorithm, we initialize the threshold (Tinit) to 0.3 and adaptively adjust it during training. .We discuss detailed
-hyperparameter settings Table\ref{tab:100k_movies},table\ref{tab:1m_movies}
+For fair comparison, we maintained consistent architectural choices and training conditions across all experiments , We conducted an extensive hyperparameter analysis comparing both approaches (Hybrid+SAS and MoL+SAS) across different architectural configurations.All experiments were Implemented in TensorFlow and trained on a Google Colab environment with a T4 GPU. We use the Adam optimizer with a learning rate of 0.001. For the hybrid algorithm, we initialize the threshold (Tinit) to 0.3 and adaptively adjust it during training.We discuss detailed hyperparameter settings in  Table\ref{tab:100k_movies},table\ref{tab:1m_movies}
 \begin{table}[h]
  \centering
 \normalsize 
@@ -377,7 +365,7 @@ hyperparameter settings Table\ref{tab:100k_movies},table\ref{tab:1m_movies}
 	\caption{Results on 1M Movies dataset}
 	\label{tab:1m_movies}
 \end{table}
-Both approaches demonstrate significant performance improvements as model capacity increases, with larger configurations consistently delivering better results. For instance, when increasing the model's capacity?such as expanding the (Max Sequence Length: 512, Embedding Dimension: 512, Number of Heads: 4, Feed-Forward Dimension: 512) the hybrid algorithm combined with SASRec (Hybrid+SAS) achieves notable gains, particularly in the most resource-intensive setup. On the ML-100K dataset, Hybrid+SAS reaches a score of\textbf{ 0.8120} compared to the baseline's \textbf{0.8016}, while on ML-1M, it achieves \textbf{0.8350} versus \textbf{0.8276.} The ML-1M dataset generally benefits more from increased capacity, with the performance gap between datasets narrowing as the model scales. While smaller configurations provide a balance of efficiency and performance, the largest configuration, despite its higher computational demands, yields the best results, making it suitable for scenarios where resources are not a constraint. Both approaches show similar benefits from scaling, but Hybrid+SAS maintains a consistent edge in performance.
+Both approaches demonstrate significant performance improvements as model capacity increases, with larger configurations consistently delivering better results. For instance, when increasing the model's capacity such as expanding the (Max Sequence Length: 512, Embedding Dimension: 512, Number of Heads: 4, Feed-Forward Dimension: 512) the hybrid algorithm combined with SASRec (Hybrid+SAS) achieves notable gains, particularly in the most resource-intensive setup. On the ML-100K dataset, Hybrid+SAS reaches a score of\textbf{ 0.8120} compared to the baseline's \textbf{0.8016}, while on ML-1M, it achieves \textbf{0.8350} versus \textbf{0.8276.} The ML-1M dataset generally benefits more from increased capacity, with the performance gap between datasets narrowing as the model scales. While smaller configurations provide a balance of efficiency and performance, the largest configuration, despite its higher computational demands, yields the best results, making it suitable for scenarios where resources are not a constraint. Both approaches show similar benefits from scaling, but Hybrid+SAS maintains a consistent edge in performance.
 \subsection{Evaluation metrics}
 
 We employ standard ranking metrics widely used in sequential recommendation:
@@ -405,10 +393,11 @@ We employ standard ranking metrics widely used in sequential recommendation:
 	\]
 	and \( \text{IDCG@}k \) is the Ideal DCG@\( k \), computed by sorting the items by their true relevance scores.
 \end{itemize}  
-The following table\ref{tab:results_tab} summarizes the performance of our hybrid algorithm compared to the MoL-based approach on the MovieLens 100K,1M datasets:
+Table \ref{tab:results_tab} summarizes the performance of our hybrid algorithm compared to the MoL-based approach on the MovieLens 100K and 1M datasets, both tested using a Max Sequence Length of 50, an Embedding Dimension of 128, 2 Attention Heads, a Feedforward Dimension of 128, a Batch Size of 128, and trained for 10 epochs .
+
+
 \begin{table}[h]
 	\centering
-
 	\begin{tabular}{|l|c|c|c|c|c|c|}
 		\hline
 		\textbf{Model} & \textbf{HR@1} & \textbf{HR@10} & \textbf{HR@50} & \textbf{HR@200} & \textbf{MRR} & \textbf{NDCG} \\ \hline
@@ -422,6 +411,7 @@ The following table\ref{tab:results_tab} summarizes the performance of our hybri
 			\caption{Performance Comparison of SASRec+Hybrid and SASRec+MoL on MovieLens 100K and 1M Datasets}
 				\label{tab:results_tab}
 \end{table}
+
 On the ML-100K dataset, our hybrid approach shows comparable performance to MoL in terms of \textbf{HR@10 (0.0775 for both)} while achieving better results in\textbf{ MRR (0.0363 vs 0.0285)} and \textbf{NDCG (0.1241 vs 0.1182)}. The hybrid algorithm particularly excels in early position recommendations, as evidenced by the non-zero HR@1 score.
 
 On the larger ML-1M dataset, both approaches show significant improvement in performance compared to ML-100K. Our hybrid algorithm achieves slightly better \textbf{HR@10 (0.1810 vs 0.1799)} \textbf{and HR@200 (0.6159 vs 0.6126)} compared to MoL, while MoL maintains a small edge in other metrics.\\
@@ -451,7 +441,7 @@ The results demonstrate that our hybrid algorithm effectively leverages both seq
 
 Choosing the right value for K in retrieval-based systems is a significant challenge, as it directly impacts both the efficiency and accuracy of information retrieval. While using a fixed K is straightforward, it often fails to adapt to the varying complexities of different queries. This can result in either missing important information or retrieving too much irrelevant data, which adds noise to the results. On the other hand, dynamically adjusting K offers greater flexibility but comes with its own set of challenges, such as increased computational costs and inconsistencies in determining the optimal retrieval size.
 To address these limitations, we introduced a hybrid dynamic K selection strategy that strikes a balance between adaptability and efficiency. Our approach adjusts K based on the unique characteristics of each query while keeping computational demands manageable. This method has shown promising results, improving retrieval performance by minimizing unnecessary noise and ensuring that critical information is consistently captured.
-Future work can explore enhancing our model with learning-based retrieval strategie such as reinforcement learning or attention mechanisms?could refine the dynamic selection of K Additionally, testing our approach in real-world scenarios and conducting large-scale evaluations across diverse domains will help validate its robustness and adaptability in various knowledge bases and retrieval settings.
+Future work can explore enhancing our model with learning-based retrieval strategie such as reinforcement learning or attention mechanisms could refine the dynamic selection of K Additionally, testing our approach in real-world scenarios and conducting large-scale evaluations across diverse domains will help validate its robustness and adaptability in various knowledge bases and retrieval settings.
 
 
 
